CostalCloud/force-app/main/default/objects/PO_Notes__c.object
<CustomObject>
    <label>PO Notes</label>
    <nameField>
        <label>Subject</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PO Notes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>