CostalCloud/force-app/main/default/objects/PO_Notes__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client/Store</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>PO Notes</relationshipLabel>
    <relationshipName>PO_Notes</relationshipName>
    <type>Lookup</type>
</CustomField>