CostalCloud/force-app/main/default/objects/PO_Notes__c/fields/Acknowledged_Read__c.field-meta.xml
<CustomField>
    <fullName>Acknowledged_Read__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Acknowledged/Read</label>
    <type>Checkbox</type>
</CustomField>