CostalCloud/force-app/main/default/objects/PO_Notes__c/fields/Acknowledged_Read_Date__c.field-meta.xml
<CustomField>
    <fullName>Acknowledged_Read_Date__c</fullName>
    <label>Acknowledged Read Date</label>
    <type>DateTime</type>
</CustomField>