CostalCloud/force-app/main/default/objects/PO_Notes__c/fields/Acknowledgement_Message__c.field-meta.xml
<CustomField>
    <fullName>Acknowledgement_Message__c</fullName>
    <label>Acknowledgement Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>