CostalCloud/force-app/main/default/objects/PO_Notes__c/fields/Auto_Push__c.field-meta.xml
<CustomField>
    <fullName>Auto_Push__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Field determines when note is created if it should be auto pushed to client system through API</inlineHelpText>
    <label>Auto Push</label>
    <type>Checkbox</type>
</CustomField>