CostalCloud/force-app/main/default/objects/PO_Notes__c/fields/Automated_Note_Type__c.field-meta.xml
<CustomField>
    <fullName>Automated_Note_Type__c</fullName>
    <inlineHelpText>Updated by flow based on status/sub-status changes</inlineHelpText>
    <label>Automated Note Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Customer Not Ready, will call RFI when ready to scheduled</fullName>
            </value>
            <value>
                <fullName>Left Message</fullName>
            </value>
            <value>
                <fullName>Needing Customer Contact FollowUp</fullName>
            </value>
            <value>
                <fullName>New PO created Manually</fullName>
            </value>
            <value>
                <fullName>New PO downloaded from Integration</fullName>
            </value>
            <value>
                <fullName>Pending Document Review</fullName>
            </value>
            <value>
                <fullName>PO Assigned to Wrong Installer</fullName>
            </value>
            <value>
                <fullName>Product Damaged/Defective</fullName>
            </value>
            <value>
                <fullName>Product Delayed</fullName>
            </value>
            <value>
                <fullName>Product Incorrect</fullName>
            </value>
            <value>
                <fullName>Product Not Available</fullName>
            </value>
            <value>
                <fullName>Product Received</fullName>
            </value>
            <value>
                <fullName>Questions//concerns on PO</fullName>
            </value>
            <value>
                <fullName>Schedule Date sent to Home Depot</fullName>
            </value>
            <value>
                <fullName>Store assistance needed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>