CostalCloud/force-app/main/default/objects/PO_Notes__c/fields/Bin_Code__c.field-meta.xml
<CustomField>
    <fullName>Bin_Code__c</fullName>
    <label>Bin Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>