CostalCloud/force-app/main/default/objects/PO_Notes__c/fields/closedBy__c.field-meta.xml
<CustomField>
    <fullName>closedBy__c</fullName>
    <label>closedBy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>