CostalCloud/force-app/main/default/objects/PO_Notes__c/fields/closedByGroupType__c.field-meta.xml
<CustomField>
    <fullName>closedByGroupType__c</fullName>
    <label>closedByGroupType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>