CostalCloud/force-app/main/default/objects/PO_Notes__c/fields/Copy_to_Mobile_App__c.field-meta.xml
<CustomField>
    <fullName>Copy_to_Mobile_App__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Copy to Mobile App?</label>
    <type>Checkbox</type>
</CustomField>