CostalCloud/force-app/main/default/objects/PO_Notes__c/fields/createdBy__c.field-meta.xml
<CustomField>
    <fullName>createdBy__c</fullName>
    <label>createdBy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>