CostalCloud/force-app/main/default/objects/PO_Notes__c/fields/createdByGroupType__c.field-meta.xml
<CustomField>
    <fullName>createdByGroupType__c</fullName>
    <label>createdByGroupType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>