CostalCloud/force-app/main/default/objects/PO_Notes__c/fields/Do_Not_Retry__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Retry__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not Retry</label>
    <type>Checkbox</type>
</CustomField>