CostalCloud/force-app/main/default/objects/PO_Notes__c/fields/Integration_Key_PONotes__c.field-meta.xml
<CustomField>
    <fullName>Integration_Key_PONotes__c</fullName>
    <externalId>true</externalId>
    <label>Integration Key (PONotes)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>