CostalCloud/force-app/main/default/objects/PO_Notes__c/fields/Note_Pushed_Date__c.field-meta.xml
<CustomField>
    <fullName>Note_Pushed_Date__c</fullName>
    <inlineHelpText>Date/time field is auto updated when note is sent to client via API</inlineHelpText>
    <label>Note Pushed Date</label>
    <type>DateTime</type>
</CustomField>