CostalCloud/force-app/main/default/objects/PO_Notes__c/fields/noteFor__c.field-meta.xml
<CustomField>
    <fullName>noteFor__c</fullName>
    <label>noteFor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>