CostalCloud/force-app/main/default/objects/PO_Notes__c/fields/noteNumber__c.field-meta.xml
<CustomField>
    <fullName>noteNumber__c</fullName>
    <externalId>true</externalId>
    <label>noteNumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>