CostalCloud/force-app/main/default/objects/PO_Notes__c/fields/noteType__c.field-meta.xml
<CustomField>
    <fullName>noteType__c</fullName>
    <label>noteType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>