CostalCloud/force-app/main/default/objects/PO_Notes__c/fields/Private_Note__c.field-meta.xml
<CustomField>
    <fullName>Private_Note__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When checked auto pushed cannot be send THD and visibility limited to RFI employees and Installer Company</inlineHelpText>
    <label>Private Note?</label>
    <type>Checkbox</type>
</CustomField>