CostalCloud/force-app/main/default/objects/PO_Notes__c/fields/svcTypeCode__c.field-meta.xml
<CustomField>
    <fullName>svcTypeCode__c</fullName>
    <formula>Work_Order__r.svcTypeCode__c</formula>
    <label>svcTypeCode</label>
    <type>Text</type>
</CustomField>