CostalCloud/force-app/main/default/objects/PO_Notes__c/fields/THD_Send_Retry_Next_DateTime__c.field-meta.xml
<CustomField>
    <fullName>THD_Send_Retry_Next_DateTime__c</fullName>
    <label>THD - Send Retry Next DateTime</label>
    <type>DateTime</type>
</CustomField>