CostalCloud/force-app/main/default/objects/PO_Notes__c/fields/WO_Integration_Client_Type__c.field-meta.xml
<CustomField>
    <fullName>WO_Integration_Client_Type__c</fullName>
    <description>Picks up the first three characters from the integration work order</description>
    <formula>LEFT(Work_Order__r.Integration_Key_WorkOrder__c, 3)</formula>
    <label>WO:Integration Client Type</label>
    <type>Text</type>
</CustomField>