CostalCloud/force-app/main/default/objects/PO_Notes__c/recordTypes/Auto_Generated_Note.recordType-meta.xml
<RecordType>
    <fullName>Auto_Generated_Note</fullName>
    <active>true</active>
    <label>Auto Generated Note</label>
</RecordType>