CostalCloud/force-app/main/default/objects/PO_Notes__c/recordTypes/Client_Note.recordType-meta.xml
<RecordType>
    <fullName>Client_Note</fullName>
    <active>true</active>
    <label>Client Note</label>
</RecordType>