CostalCloud/force-app/main/default/objects/PO_Notes__c/recordTypes/Installer_Manual_Note.recordType-meta.xml
<RecordType>
    <fullName>Installer_Manual_Note</fullName>
    <active>true</active>
    <label>Installer Manual Note</label>
</RecordType>