CostalCloud/force-app/main/default/objects/PO_Notes__c/recordTypes/Private_Note.recordType-meta.xml
<RecordType>
    <fullName>Private_Note</fullName>
    <active>true</active>
    <label>Private Note</label>
</RecordType>