CostalCloud/force-app/main/default/objects/PO_Notes__c/recordTypes/RFI_Note.recordType-meta.xml
<RecordType>
    <fullName>RFI_Note</fullName>
    <active>true</active>
    <label>RFI Note</label>
</RecordType>