CostalCloud/force-app/main/default/objects/PO_Notes__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Account__c</columns>
    <columns>Acknowledged_Read__c</columns>
    <columns>Store_No__c</columns>
    <columns>Work_Order__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>NAME</columns>
    <columns>Date_Closed__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>